added cor permission

--- a/MovieWebApi/appsettings.json
+++ b/MovieWebApi/appsettings.json
@@ -4,6 +4,7 @@
     "MovieWebDbConnection": "Server=MyBoo123;Integrated Security = true;Initial Catalog = MovieWeb;TrustServerCertificate=True;"
   },
   "privateKey": "this_is_my_private_key_for_jwt_token_generation_12345",
+  "spaUrl": "http://localhost:4200",
   "expirationHours": 72,
   "issuer": "MyMovieWebApi",
   "audience": "MyMovieWebApiUsers",
